--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0, user-scalable=no">
+    <meta name="apple-mobile-web-app-capable"content="yes"/>
     <title>refuel</title>
     <script type="text/javascript" src="http://api.map.baidu.com/api?v=3.0&ak=7latSy7K5mjlPBsGb2VlqLzKL8MLoRWB"></script>
   </head>
